--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <img class="loading-image" src="./images/Eclipse-1s-200px.svg" alt="Chargement..." />
           </div>
         <header class="header">
-            <img class="header__logo" src="./images/logo/ohmyfood@2x.svg" alt="">
+            <div class="header__logo">
+                <img src="./images/logo/ohmyfood@2x.svg" alt="">
+            </div>
             <div class="location">
                 <i class="fas fa-map-marker-alt"></i>
                 <span>Paris, Belleville</i></span>
@@ -28,16 +30,16 @@
         </header>
         <main>
             <section class="presentation">
-                <h1>Réservez le menu qui vous convient</h1>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <button class="presentation__button">Explorer nos restaurants</button>
+                <h1>Réservez le menu qui<br> vous convient</h1>
+                <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
+                <button class="action_button">Explorer nos restaurants</button>
             </section>
                 <section class="fonctionnement">
                     <h2>Fonctionnement</h2>
                     <ul class="">
-                        <li><i class="fa-solid fa-mobile-screen"></i>Choissisez un restaurant</li>
-                        <li><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                        <li><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+                        <li><span class="number">1</span><i class="fa-solid fa-mobile-screen"></i>Choissisez un restaurant</li>
+                        <li><span class="number">1</span><i class="fa-solid fa-list"></i>Composez votre menu</li>
+                        <li><span class="number">1</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
                     </ul>
                 </section>
                 <section class="restaurants">
@@ -45,6 +47,7 @@
                     <div class="restaurants__cards">
                         <a href="./restaurants/la_palette_du_gout.html">
                             <article class="card">
+                                <span class="new_restaurant">Nouveau</span>
                                 <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -54,7 +57,7 @@
                                     <div>
                                         <button class="icon-button">
                                             <i class="fa-regular fa-heart icon-default"></i>
-                                            <i class="fa-solid fa-heart icon-hover "></i>
+                                            <i class="fa-solid fa-heart icon-hover"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -62,6 +65,7 @@
                         </a>
                         <a href="#">
                             <article class="card">
+                                <span class="new_restaurant">Nouveau</span>
                                 <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -115,10 +119,10 @@
                 </section>
         </main>
         <footer class="footer">
+            <img src="./images/logo/ohmyfood@2x.svg" alt="">
             <ul>
-                <li class="footer__logo"><img src="./images/logo/ohmyfood@2x.svg" alt=""></li>
-                <li><a href="">Proposer un restaurant</a></li>
-                <li><a href="">Devenir partenaire</a></li>
+                <li><a href=""><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href=""><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <li><a href="">Mentions légales</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
