--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
                 <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
                 <button class="action_button">Explorer nos restaurants</button>
             </section>
-                <section class="fonctionnement">
+            <section class="fonctionnement">
+                <div>
                     <h2>Fonctionnement</h2>
                     <ul class="">
                         <li><span class="number">1</span><i class="fa-solid fa-mobile-screen"></i>Choissisez un restaurant</li>
-                        <li><span class="number">1</span><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                        <li><span class="number">1</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+                        <li><span class="number">2</span><i class="fa-solid fa-list"></i>Composez votre menu</li>
+                        <li><span class="number">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
                     </ul>
-                </section>
-                <section class="restaurants">
+                </div>
+            </section>
+            <section class="restaurants">
+                <div>
                     <h2>Restaurants</h2>
                     <div class="restaurants__cards">
                         <a href="./restaurants/la_palette_du_gout.html">
@@ -116,7 +119,8 @@
                             </article>
                         </a>
                     </div>
-                </section>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <img src="./images/logo/ohmyfood@2x.svg" alt="">
