--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -26,157 +26,161 @@
             <img  class="header__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
         </header>
         <main>
-            <div class="menu__title">
-                <h1>La palette du goût</h1>
-                <button class="icon-button">
-                    <i class="fa-regular fa-heart icon-default"></i>
-                    <i class="fa-solid fa-heart icon-hover"></i>
-                </button>
-            </div>
-            <section class="entrees">
-                <h2>Entrées</h2>
-                <a href="">        
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Fricassée d'escargots</h3>
-                                <p class="card-subtitle">Au piment d'Espelette</p>
-                            </div>
-                            <div class="card__price">
-                                <p>25€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-                <a href="">
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Foie gras de canard mi-cuit</h3>
-                                <p class="card-subtitle">Et ses copeaux de truffe noire</p>
-                            </div>
-                            <div class="card__price">
-                                <p>35€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-                <a href="">
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Oeuf au plat</h3>
-                                <p class="card-subtitle">Assaissoné à la truffe sur lit de caviar</p>
-                            </div>
-                            <div class="card__price">
-                                <p>20€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-            </section>
-            <section class="plats">
-                <h2>Plats</h2>
-                <a href="">  
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Filet de boeuf aux herbes</h3>
-                                <p class="card-subtitle">Accompagné de sa ribambelle de légumes</p>
-                            </div>
-                            <div class="card__price">
-                                <p>40€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-                <a href="">        
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Parmentier de queue de boeuf</h3>
-                                <p class="card-subtitle">A la truffe noire sur sa purée de panais</p>
-                            </div>
-                            <div class="card__price">
-                                <p>35€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-                <a href="">
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Filet de turbot</h3>
-                                <p class="card-subtitle">Aux agrumes</p>
-                            </div>
-                            <div class="card__price">
-                                <p>44€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-            </section>
-            <section class="desserts">
-                <h2>Desserts</h2>
-                <a href="">
-                    <article class="card">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Paris-Brest</h3>
-                                <p class="card-subtitle">Revisité</p>
-                            </div>
-                            <div class="card__price">
-                                <p>18€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-                <a href="">                    
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Macaron au chocolat d'exception</h3>
-                                <p class="card-subtitle">Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <div class="card__price">
-                                <p>22€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-                <a href="">
-                    <article class="card menu">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Mousse au chocolat</h3>
-                                <p class="card-subtitle">Au piment d'Espelette et à la truffe noire</p>
-                            </div>
-                            <div class="card__price">
-                                <p>23€</p>
-                            </div>
-                        </div>
-                        <div class="checkmark">✓</div>
-                    </article>
-                </a>
-            </section>
-            <div class="command_action">
-                <button class="action_button">Commander</button>
+            <div class="menu">
+                <div>
+                    <div class="menu__title">
+                        <h1>La palette du goût</h1>
+                        <button class="icon-button">
+                            <i class="fa-regular fa-heart icon-default"></i>
+                            <i class="fa-solid fa-heart icon-hover"></i>
+                        </button>
+                    </div>
+                    <section class="entrees">
+                        <h2>Entrées</h2>
+                        <a href="">        
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Fricassée d'escargots</h3>
+                                        <p class="card-subtitle">Au piment d'Espelette</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>25€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                        <a href="">
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Foie gras de canard mi-cuit</h3>
+                                        <p class="card-subtitle">Et ses copeaux de truffe noire</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>35€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                        <a href="">
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Oeuf au plat</h3>
+                                        <p class="card-subtitle">Assaissoné à la truffe sur lit de caviar</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>20€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                    </section>
+                    <section class="plats">
+                        <h2>Plats</h2>
+                        <a href="">  
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Filet de boeuf aux herbes</h3>
+                                        <p class="card-subtitle">Accompagné de sa ribambelle de légumes</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>40€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                        <a href="">        
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Parmentier de queue de boeuf</h3>
+                                        <p class="card-subtitle">A la truffe noire sur sa purée de panais</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>35€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                        <a href="">
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Filet de turbot</h3>
+                                        <p class="card-subtitle">Aux agrumes</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>44€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                    </section>
+                    <section class="desserts">
+                        <h2>Desserts</h2>
+                        <a href="">
+                            <article class="card">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Paris-Brest</h3>
+                                        <p class="card-subtitle">Revisité</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>18€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                        <a href="">                    
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Macaron au chocolat d'exception</h3>
+                                        <p class="card-subtitle">Et glace à la vanille de Madagascar</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>22€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                        <a href="">
+                            <article class="card menu">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Mousse au chocolat</h3>
+                                        <p class="card-subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                    </div>
+                                    <div class="card__price">
+                                        <p>23€</p>
+                                    </div>
+                                </div>
+                                <div class="checkmark">✓</div>
+                            </article>
+                        </a>
+                    </section>
+                    <div class="command_action">
+                        <button class="action_button">Commander</button>
+                    </div>
+                </div>
             </div>
         </main>
         <footer class="footer">
+            <img src="../images/logo/ohmyfood@2x.svg" alt="">
             <ul>
-                <li class="footer__logo"><img src="../images/logo/ohmyfood@2x.svg" alt=""></li>
-                <li><a href="">Proposer un restaurant</a></li>
-                <li><a href="">Devenir partenaire</a></li>
+                <li><a href=""><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href=""><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <li><a href="">Mentions légales</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
