--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <section class="fonctionnement">
                 <div>
                     <h2>Fonctionnement</h2>
-                    <ul class="">
-                        <li><span class="number">1</span><i class="fa-solid fa-mobile-screen"></i>Choissisez un restaurant</li>
-                        <li><span class="number">2</span><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                        <li><span class="number">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+                    <ul>
+                        <li><span>1</span><i class="fa-solid fa-mobile-screen"></i>Choissisez un restaurant</li>
+                        <li><span>2</span><i class="fa-solid fa-list"></i>Composez votre menu</li>
+                        <li><span>3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
                     </ul>
                 </div>
             </section>
@@ -50,8 +50,8 @@
                     <div class="restaurants__cards">
                         <a href="./restaurants/la_palette_du_gout.html">
                             <article class="card">
-                                <span class="new_restaurant">Nouveau</span>
-                                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                                <span class="card_tag">Nouveau</span>
+                                <img class="card_image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">La palette du goût</h3>
@@ -68,8 +68,8 @@
                         </a>
                         <a href="#">
                             <article class="card">
-                                <span class="new_restaurant">Nouveau</span>
-                                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                                <span class="card_tag">Nouveau</span>
+                                <img class="card_image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">La note enchantée</h3>
@@ -86,7 +86,7 @@
                         </a>
                         <a href="#">
                             <article class="card">
-                                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                                <img class="card_image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">A la française</h3>
@@ -103,7 +103,7 @@
                         </a>
                         <a href="#">
                             <article class="card">
-                                <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                                <img class="card_image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Le délice des sens</h3>
@@ -123,8 +123,8 @@
             </section>
         </main>
         <footer class="footer">
-            <img src="./images/logo/ohmyfood@2x.svg" alt="">
-            <ul>
+            <h2 class="footer_title">ohmyfood</h2>
+            <ul class="footer_list">
                 <li><a href=""><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href=""><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <li><a href="">Mentions légales</a></li>
