--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -18,25 +18,24 @@
     <div class="main-container">
         <header class="header">
             <div class="header__logo">
-                <a href="../index.html" class="back-button">
+                <a href="../index.html" class="header__back-button">
                     <i class="fa fa-arrow-left"></i>
                 </a>
                 <img src="../images/logo/ohmyfood@2x.svg" alt="">
             </div>
-            <img  class="header__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
         </header>
         <main>
+            <img  class="menu__page__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
             <div class="menu">
-                <div>
-                    <div class="menu__title">
-                        <h1>La palette du goût</h1>
+                    <div class="menu__header">
+                        <h1 class="menu__title">La palette du goût</h1>
                         <button class="icon-button">
                             <i class="fa-regular fa-heart icon-default"></i>
                             <i class="fa-solid fa-heart icon-hover"></i>
                         </button>
                     </div>
                     <section class="entrees">
-                        <h2>Entrées</h2>
+                        <h2 class="section_title">ENTREES</h2>
                         <a href="">        
                             <article class="card menu">
                                 <div class="card-content">
@@ -81,7 +80,7 @@
                         </a>
                     </section>
                     <section class="plats">
-                        <h2>Plats</h2>
+                        <h2 class="section_title">PLATS</h2>
                         <a href="">  
                             <article class="card menu">
                                 <div class="card-content">
@@ -126,7 +125,7 @@
                         </a>
                     </section>
                     <section class="desserts">
-                        <h2>Desserts</h2>
+                        <h2 class="section_title">DESSERTS</h2>
                         <a href="">
                             <article class="card">
                                 <div class="card-content">
@@ -173,12 +172,11 @@
                     <div class="command_action">
                         <button class="action_button">Commander</button>
                     </div>
-                </div>
             </div>
         </main>
         <footer class="footer">
-            <img src="../images/logo/ohmyfood@2x.svg" alt="">
-            <ul>
+            <h2 class="footer_title">ohmyfood</h2>
+            <ul class="footer_list">
                 <li><a href=""><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href=""><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <li><a href="">Mentions légales</a></li>
