--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="main-container">
-        <header class="header">
+        <header class="header menu__header">
             <div class="header__logo">
                 <a href="../index.html" class="header__back-button">
                     <i class="fa fa-arrow-left"></i>
@@ -25,156 +25,158 @@
             </div>
         </header>
         <main>
-            <img  class="menu__page__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
             <div class="menu">
-                    <div class="menu__header">
-                        <h1 class="menu__title">La palette du goût</h1>
-                        <button class="icon-button">
-                            <i class="fa-regular fa-heart icon-default"></i>
-                            <i class="fa-solid fa-heart icon-hover"></i>
-                        </button>
-                    </div>
-                    <section class="entrees">
-                        <h2 class="section_title">ENTREES</h2>
-                        <a href="">        
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Fricassée d'escargots</h3>
-                                        <p class="card-subtitle">Au piment d'Espelette</p>
+                <img  class="menu__page__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="menu__header">
+                    <h1 class="menu__title">La palette du goût</h1>
+                    <button class="icon-button">
+                        <i class="fa-regular fa-heart icon-default"></i>
+                        <i class="fa-solid fa-heart icon-hover"></i>
+                    </button>
+                </div>
+                <div class="menu__body">
+                        <section class="entrees">
+                            <h2 class="section_title">ENTRÉES</h2>
+                            <a href="">        
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Fricassée d'escargots</h3>
+                                            <p class="card-subtitle">Au piment d'Espelette</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>25€</p>
+                                        </div>
                                     </div>
-                                    <div class="card__price">
-                                        <p>25€</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                            <a href="">
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Foie gras de canard mi-cuit</h3>
+                                            <p class="card-subtitle">Et ses copeaux de truffe noire</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>35€</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                        <a href="">
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Foie gras de canard mi-cuit</h3>
-                                        <p class="card-subtitle">Et ses copeaux de truffe noire</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                            <a href="">
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Oeuf au plat</h3>
+                                            <p class="card-subtitle">Assaissoné à la truffe sur lit de caviar</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>20€</p>
+                                        </div>
                                     </div>
-                                    <div class="card__price">
-                                        <p>35€</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                        </section>
+                        <section class="plats">
+                            <h2 class="section_title">PLATS</h2>
+                            <a href="">  
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Filet de boeuf aux herbes</h3>
+                                            <p class="card-subtitle">Accompagné de sa ribambelle de légumes</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>40€</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                        <a href="">
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Oeuf au plat</h3>
-                                        <p class="card-subtitle">Assaissoné à la truffe sur lit de caviar</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                            <a href="">        
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Parmentier de queue de boeuf</h3>
+                                            <p class="card-subtitle">A la truffe noire sur sa purée de panais</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>35€</p>
+                                        </div>
                                     </div>
-                                    <div class="card__price">
-                                        <p>20€</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                            <a href="">
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Filet de turbot</h3>
+                                            <p class="card-subtitle">Aux agrumes</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>44€</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                    </section>
-                    <section class="plats">
-                        <h2 class="section_title">PLATS</h2>
-                        <a href="">  
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Filet de boeuf aux herbes</h3>
-                                        <p class="card-subtitle">Accompagné de sa ribambelle de légumes</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                        </section>
+                        <section class="desserts">
+                            <h2 class="section_title">DESSERTS</h2>
+                            <a href="">
+                                <article class="card">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Paris-Brest</h3>
+                                            <p class="card-subtitle">Revisité</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>18€</p>
+                                        </div>
                                     </div>
-                                    <div class="card__price">
-                                        <p>40€</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                            <a href="">                    
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Macaron au chocolat d'exception</h3>
+                                            <p class="card-subtitle">Et glace à la vanille de Madagascar</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>22€</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                        <a href="">        
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Parmentier de queue de boeuf</h3>
-                                        <p class="card-subtitle">A la truffe noire sur sa purée de panais</p>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                            <a href="">
+                                <article class="card menu">
+                                    <div class="card-content">
+                                        <div class="card-txt">
+                                            <h3 class="card-title">Mousse au chocolat</h3>
+                                            <p class="card-subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                        </div>
+                                        <div class="card-price">
+                                            <p>23€</p>
+                                        </div>
                                     </div>
-                                    <div class="card__price">
-                                        <p>35€</p>
-                                    </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                        <a href="">
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Filet de turbot</h3>
-                                        <p class="card-subtitle">Aux agrumes</p>
-                                    </div>
-                                    <div class="card__price">
-                                        <p>44€</p>
-                                    </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                    </section>
-                    <section class="desserts">
-                        <h2 class="section_title">DESSERTS</h2>
-                        <a href="">
-                            <article class="card">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Paris-Brest</h3>
-                                        <p class="card-subtitle">Revisité</p>
-                                    </div>
-                                    <div class="card__price">
-                                        <p>18€</p>
-                                    </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                        <a href="">                    
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Macaron au chocolat d'exception</h3>
-                                        <p class="card-subtitle">Et glace à la vanille de Madagascar</p>
-                                    </div>
-                                    <div class="card__price">
-                                        <p>22€</p>
-                                    </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                        <a href="">
-                            <article class="card menu">
-                                <div class="card-content">
-                                    <div class="card-txt">
-                                        <h3 class="card-title">Mousse au chocolat</h3>
-                                        <p class="card-subtitle">Au piment d'Espelette et à la truffe noire</p>
-                                    </div>
-                                    <div class="card__price">
-                                        <p>23€</p>
-                                    </div>
-                                </div>
-                                <div class="checkmark">✓</div>
-                            </article>
-                        </a>
-                    </section>
-                    <div class="command_action">
-                        <button class="action_button">Commander</button>
-                    </div>
+                                    <div class="checkmark">✓</div>
+                                </article>
+                            </a>
+                        </section>
+                        <div class="command_action">
+                            <button class="action_button">Commander</button>
+                        </div>
+                </div>
             </div>
         </main>
-        <footer class="footer">
+        <footer class="footer menu__footer">
             <h2 class="footer_title">ohmyfood</h2>
             <ul class="footer_list">
                 <li><a href=""><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
