--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         <main>
             <section class="presentation">
-                <h1>Réservez le menu qui<br> vous convient</h1>
+                <h1 class="presentation__title">Réservez le menu qui<br> vous convient</h1>
                 <p>Découvrez des restaurants d'exception,<br> sélectionnés par nos soins.</p>
                 <button class="action_button">Explorer nos restaurants</button>
             </section>
