mobile ok / desktop home ok

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -37,7 +39,7 @@
             <section class="fonctionnement">
                 <div>
                     <h2>Fonctionnement</h2>
-                    <ul>
+                    <ul class="fonctionnement_list">
                         <li><span>1</span><i class="fa-solid fa-mobile-screen"></i>Choissisez un restaurant</li>
                         <li><span>2</span><i class="fa-solid fa-list"></i>Composez votre menu</li>
                         <li><span>3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
@@ -127,8 +129,8 @@
             <ul class="footer_list">
                 <li><a href=""><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href=""><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                <li><a href="">Mentions légales</a></li>
-                <li><a href="">Contact</a></li>
+                <li class="footer_last_links"><a href="">Mentions légales</a></li>
+                <li class="footer_last_links"><a href="">Contact</a></li>
             </ul>
         </footer>
     </div>
