--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -38,7 +40,7 @@
                         <section class="entrees">
                             <h2 class="section_title">ENTRÉES</h2>
                             <a href="">        
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Fricassée d'escargots</h3>
@@ -48,7 +50,7 @@
                                             <p>25€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                             <a href="">
@@ -62,21 +64,21 @@
                                             <p>35€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                             <a href="">
                                 <article class="card menu">
                                     <div class="card-content">
                                         <div class="card-txt">
-                                            <h3 class="card-title">Oeuf au plat</h3>
+                                            <h3 class="card-title">Œuf au plat</h3>
                                             <p class="card-subtitle">Assaissoné à la truffe sur lit de caviar</p>
                                         </div>
                                         <div class="card-price">
                                             <p>20€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                         </section>
@@ -93,7 +95,7 @@
                                             <p>40€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                             <a href="">        
@@ -107,7 +109,7 @@
                                             <p>35€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                             <a href="">
@@ -121,7 +123,7 @@
                                             <p>44€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                         </section>
@@ -138,7 +140,7 @@
                                             <p>18€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                             <a href="">                    
@@ -152,7 +154,7 @@
                                             <p>22€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                             <a href="">
@@ -166,7 +168,7 @@
                                             <p>23€</p>
                                         </div>
                                     </div>
-                                    <div class="checkmark">✓</div>
+                                    <div class="checkmark"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                                 </article>
                             </a>
                         </section>
