--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -29,14 +29,15 @@
         <main>
             <div class="menu">
                 <img  class="menu__page__image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                <div class="menu__header">
-                    <h1 class="menu__title">La palette du goût</h1>
-                    <button class="icon-button">
-                        <i class="fa-regular fa-heart icon-default"></i>
-                        <i class="fa-solid fa-heart icon-hover"></i>
-                    </button>
-                </div>
-                <div class="menu__body">
+                <div class="menu__container">
+                    <div class="menu__header">
+                        <h1 class="menu__title">La palette du goût</h1>
+                        <button class="icon-button">
+                            <i class="fa-regular fa-heart icon-default"></i>
+                            <i class="fa-solid fa-heart icon-hover"></i>
+                        </button>
+                    </div>
+                    <div class="menu__body">
                         <section class="entrees">
                             <h2 class="section_title">ENTRÉES</h2>
                             <a href="">        
@@ -54,7 +55,7 @@
                                 </article>
                             </a>
                             <a href="">
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Foie gras de canard mi-cuit</h3>
@@ -68,7 +69,7 @@
                                 </article>
                             </a>
                             <a href="">
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Œuf au plat</h3>
@@ -85,7 +86,7 @@
                         <section class="plats">
                             <h2 class="section_title">PLATS</h2>
                             <a href="">  
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Filet de boeuf aux herbes</h3>
@@ -99,7 +100,7 @@
                                 </article>
                             </a>
                             <a href="">        
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Parmentier de queue de boeuf</h3>
@@ -113,7 +114,7 @@
                                 </article>
                             </a>
                             <a href="">
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Filet de turbot</h3>
@@ -144,7 +145,7 @@
                                 </article>
                             </a>
                             <a href="">                    
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Macaron au chocolat d'exception</h3>
@@ -158,7 +159,7 @@
                                 </article>
                             </a>
                             <a href="">
-                                <article class="card menu">
+                                <article class="card">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="card-title">Mousse au chocolat</h3>
@@ -175,6 +176,7 @@
                         <div class="command_action">
                             <button class="action_button">Commander</button>
                         </div>
+                    </div>
                 </div>
             </div>
         </main>
